--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,19 @@ android {
         useLibrary 'org.apache.http.legacy'
         // this library is needed for asynktast http client working in android 6.0
     }
+
+    /*this is needed for after adding 3 library in lib folder for multipart (Start)*/
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/ECLIPSE_.SF'
+        exclude 'META-INF/ECLIPSE_.RSA'
+    }
+    /*this is needed for after adding 3 library in lib folder for multipart (End)*/
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,7 +43,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    compile 'com.android.support:appcompat-v7:25.1.1'
+    //    compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.2.0'
@@ -40,82 +53,123 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     /*this is needed for showing beautifull dialog during logout time (Start)*/
+
     /*https://github.com/pedant/sweet-alert-dialog*/
     compile 'cn.pedant.sweetalert:library:1.3'
     /*https://github.com/pedant/sweet-alert-dialog*/
+
     /*this is needed for showing beautifull dialog during logout time (End)*/
+
     /*this is needed for edittext Password field (Start)*/
+
     /*https://github.com/anshulagarwal06/PasswordEditText*/
     compile 'com.github.anshulagarwal06:PasswordEditText:v1.0'
     /*https://github.com/anshulagarwal06/PasswordEditText*/
+
     /*this is needed for edittext Password field (End)*/
+
     /*this is needed for material spinner on registration screen (Start)*/
+
     /*https://github.com/jaredrummler/Material-Spinner*/
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.github.rey5137:material:1.2.4'
     /*https://github.com/jaredrummler/Material-Spinner*/
+
     /*this is needed for material spinner on registration screen (End)*/
+
     /* this library is needed for animating blank fields (Start)*/
+
     /*https://github.com/daimajia/AndroidViewAnimations*/
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
     /*https://github.com/daimajia/AndroidViewAnimations*/
+
     /* this library is needed for animating blank fields (End)*/
+
     /*this is needed for showing beautiful toast messages on signup time (Start)*/
+
     /*https://github.com/yadav-rahul/TastyToast/tree/lib/tastytoast*/
     compile 'com.sdsmdg.tastytoast:tastytoast:0.0.4'
     /*https://github.com/yadav-rahul/TastyToast/tree/lib/tastytoast*/
+
     /*this is needed for showing beautiful toast messages on signup time (End)*/
+
     /*this is needed for adding ripple effects in layouts (Start)*/
+
     /*https://github.com/traex/RippleEffect*/
     compile 'com.github.traex.rippleeffect:library:1.3'
     /*https://github.com/traex/RippleEffect*/
+
     /*this is needed for adding ripple effects in layouts (End)*/
+
     /*this is needed for snackbar (Start)*/
+
     /*https://github.com/nispok/snackbar*/
     compile 'com.nispok:snackbar:2.11.+'
     /*https://github.com/nispok/snackbar*/
+
     /*this is needed for snackbar (End)*/
+
     /*this is needed for circular image view (Start)*/
+
     /*https://github.com/hdodenhof/CircleImageView*/
     compile 'de.hdodenhof:circleimageview:2.1.0'
     /*https://github.com/hdodenhof/CircleImageView*/
+
     /*this is needed for circular image view (End)*/
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     /*this is needed for showing new beautiful dialog with logo icon (Start)*/
+
     /*https://github.com/Taishi-Y/FlipProgressDialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5054*/
     compile 'com.taishi-y:flipprogressdialog:0.1.0'
     /*https://github.com/Taishi-Y/FlipProgressDialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5054*/
+
     /*this is needed for showing new beautiful dialog with logo icon (End)*/
+
     /*this is needed for sliding indicator for main screen (Start)*/
+
     //    https://github.com/ongakuer/CircleIndicator?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1268
+
     //    https://github.com/romandanylyk/PageIndicatorView?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4555
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'com.romandanylyk:pageindicatorview:0.1.1'
     //    https://github.com/ongakuer/CircleIndicator?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1268
+
     //    https://github.com/romandanylyk/PageIndicatorView?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4555
+
     /*this is needed for sliding indicator for main screen (End)*/
+
     /*this is needed for number picker on add to cart (Start)*/
+
     /*https://github.com/ShawnLin013/NumberPicker*/
     compile 'com.shawnlin:number-picker:2.4.2'
     /*https://github.com/ShawnLin013/NumberPicker*/
+
     /*this is needed for number picker on add to cart (End)*/
+
     /*this is needed for using % layout in xml (Start)*/
     compile 'com.android.support:percent:25.2.0'
     /*this is needed for using % layout in xml (End)*/
 
     /*this is needed for image picker during edit profile (Start)*/
+
     /*https://github.com/Tofira/ImagePickerWithCrop?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4760*/
     compile 'com.yalantis:ucrop:2.2.0'
     compile 'com.github.jksiezni.permissive:permissive:0.2'
     /*https://github.com/Tofira/ImagePickerWithCrop?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4760*/
+
     /*this is needed for image picker during edit profile (End)*/
 
-
-
     /*
-                compile 'com.github.medyo:fancybuttons:1.8.3'   // facybutton for facebook
-            */
+                    compile 'com.github.medyo:fancybuttons:1.8.3'   // facybutton for facebook
+                */
+
+    /*this is needed for using multipart option for sending image to server so we add 3 jar files in lib folder and add dependency from project structure (Start)*/
     compile project(':CircularProgress-google')
+//    compile files('libs/httpclient-4.3.6.jar')
+//    compile files('libs/httpcore-4.3.3.jar')
+//    compile files('libs/httpmime-4.3.6.jar')
+//    compile 'org.apache.httpcomponents:httpcore:4.4.4'
+    /*this is needed for using multipart option for sending image to server so we add 3 jar files in lib folder and add dependency from project structure (End)*/
 }
