--- a/app/build.gradle
+++ b/app/build.gradle
@@ -191,4 +191,12 @@ dependencies {
     /*https://github.com/bhargavms/DotLoader?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4032*/
     /*this  is needed for dot loader for address field update (Spinner - Country, State, City )   (End)*/
 
+
+
+    /*this is needed for adding sweetalert in product delet in checkout time (Start)*/
+    /*https://github.com/pedant/sweet-alert-dialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1065*/
+    compile 'cn.pedant.sweetalert:library:1.3'
+    /*https://github.com/pedant/sweet-alert-dialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1065*/
+    /*this is needed for adding sweetalert in product delet in checkout time (End)*/
+
 }
