--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,13 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
+            android:name=".InventoryOderListActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".EditProfileActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
