--- a/app/build.gradle
+++ b/app/build.gradle
@@ -177,13 +177,11 @@ dependencies {
 
     compile 'com.paypal.sdk:paypal-android-sdk:2.15.3'
 
-
     /*this is needed for country code in signup screen (Start)*/
     /*https://github.com/dlukashev/android-phone-number-with-flags*/
     compile 'com.googlecode.libphonenumber:libphonenumber:6.2'
     /*https://github.com/dlukashev/android-phone-number-with-flags*/
     /*this is needed for country code in signup screen (End)*/
-
 
     /*this  is needed for dot loader for address field update (Spinner - Country, State, City )   (Start)*/
     /*https://github.com/bhargavms/DotLoader?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4032*/
@@ -191,12 +189,17 @@ dependencies {
     /*https://github.com/bhargavms/DotLoader?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=4032*/
     /*this  is needed for dot loader for address field update (Spinner - Country, State, City )   (End)*/
 
-
-
     /*this is needed for adding sweetalert in product delet in checkout time (Start)*/
     /*https://github.com/pedant/sweet-alert-dialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1065*/
     compile 'cn.pedant.sweetalert:library:1.3'
     /*https://github.com/pedant/sweet-alert-dialog?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1065*/
     /*this is needed for adding sweetalert in product delet in checkout time (End)*/
+
+
+    /*this is needed for product description hint on Publicate new product screen (Start)*/
+    /*https://github.com/minube/Text-Length-Bar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5432*/
+    compile 'com.github.minube:Text-Length-Bar:beta-1.0'
+    /*https://github.com/minube/Text-Length-Bar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5432*/
+    /*this is needed for product description hint on Publicate new product screen (End)*/
 
 }
