--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,13 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
+            android:name=".PublicateNewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".WebViewProfileImage"
             android:label="@string/app_name"
             android:largeHeap="true"
