Contact Support Screen Added, during Signup time user can select User type and acconding to that menu can publicate option is visible for only Seller type user else hide

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,13 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
+            android:name=".ContactSupportActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".WebViewProfileImage"
             android:label="@string/app_name"
             android:largeHeap="true"
