Publicate New Product added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".MainBuyerActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme"
