Seller Activity  added after login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,13 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
+            android:name=".MainSellerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".EditDeliveryActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
