Seller Edit Product, Delete Product Activity  added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,13 @@
             android:windowSoftInputMode="stateHidden" />
 
         <activity
+            android:name=".SellerSingleProductEditDetail"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
             android:name=".GetDeliveryAddress"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
